fix button-group align bug

--- a/packages/theme-default/src/button.css
+++ b/packages/theme-default/src/button.css
@@ -152,6 +152,7 @@
   @b button-group {
     @utils-clearfix;
     display: inline-block;
+    vertical-align: middle;
 
     & .el-button {
       float: left;
